[package]
name = "create2mine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
hex = "0.4.3"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.6.1"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
